2014-08-07  Timothy Hatcher  <timothy@apple.com>

        Fix regression where tree outline keyboard navigation is broken.

        https://bugs.webkit.org/show_bug.cgi?id=135718

        Reviewed by Joseph Pecoraro.

        * UserInterface/Views/TreeOutline.js:
        (TreeElement.prototype.revealed): Fix the check for currentAncestor.hidden.

2014-08-07  Timothy Hatcher  <timothy@apple.com>

        Web Inspector: Filter bar text and icon are positioned too low and tight
        https://bugs.webkit.org/show_bug.cgi?id=135723

        Reviewed by Joseph Pecoraro.

        * UserInterface/Views/FilterBar.css:
        (.filter-bar > input[type="search"]):
        (.filter-bar > input[type="search"]::-webkit-search-decoration):
        * UserInterface/Views/SearchBar.css:
        (.search-bar > input[type="search"]):

2014-08-07  Timothy Hatcher  <timothy@apple.com>

        Web Inspector: Dashboard error and warning icons should be filled when enabled
        https://bugs.webkit.org/show_bug.cgi?id=135725

        Reviewed by Joseph Pecoraro.

        * UserInterface/Images/ErrorsEnabled.svg:
        * UserInterface/Images/IssuesEnabled.svg:

2014-08-07  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Dashboard contents shift when window changes active state
        https://bugs.webkit.org/show_bug.cgi?id=135724

        Reviewed by Timothy Hatcher.

        The container was getting a 1px border when inactive and none when active.
        Give it a transparent border when active so contents don't change size.

        * UserInterface/Views/DashboardContainerView.css:
        (.toolbar .dashboard-container):

2014-08-07  Timothy Hatcher  <timothy@apple.com>

        Fix reference to missing CloseTimeline.svg image.

        Rubber-stamped by Joseph Pecoraro.

        * UserInterface/Views/TimelineSidebarPanel.js:
        (WebInspector.TimelineSidebarPanel.createTimelineTreeElement): Use CloseLarge.svg instead.
